--- a/vuelos-front/package.json
+++ b/vuelos-front/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "core-js": "^3.33.3",
+    "vue": "^3.3.9",
+    "vue-router": "^4.2.5",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
